<resources>
    <string name="app_name">XinYouDaPda</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_user">登录</string>
    <string name="login_pass">密码</string>
    <string name="very_code">验证码</string>
    <string name="login_botton">登录</string>
    <string name="v_login_name">登录名</string>
    <string name="login_text_copy">Copyright @2024</string>
</resources>